# rust_c_interop

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.c
rust_lib/: Cargo.toml  build.rs
rust_lib/include/: rust_lib.h
rust_lib/src/: lib.rs
